--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.2",
         "psr/log": "^1.1",
-        "simplepie/utility-pack": "dev-master",
+        "simplepie/utility-pack": "^2.2",
         "symfony/finder": "^4.2"
     },
     "require-dev": {
